# GAIA_agent

./: Dockerfile  README.md  agent.py  app.py  pyproject.toml  requirements.txt
app/: app.py
src/: agent.py
src/tools/: __init__.py  duckduckgo.py  video_tools.py  web.py
src/utils/: __init__.py  env_utils.py  logging_utils.py  yt_utils.py
tools/: __init__.py  duckduckgo.py
